# realtime-dataanalytics

./: README.md  pyproject.toml
src/: app.py
