[tool.poetry]
name = "realtime-dataanalytics"
version = "0.1.0"
description = ""
authors = ["ClaudioPontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
